feat: ajouter proposition des offres dans le dashboard